--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
 asgiref==3.4.0
+dj-database-url==0.5.0
 Django==3.2.4
 django-crispy-forms==1.12.0
+django-on-heroku==1.1.2
 gunicorn==20.1.0
 Pillow==8.3.0
+psycopg2-binary==2.9.1
 python-decouple==3.4
 pytz==2021.1
 sqlparse==0.4.1
